--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <header id="header">
             <h1 id="page-title">LO0E - UML4 T1</h1>
-            <p id="naam">Naam van student</p>
+            <p id="naam">marley lofowong</p>
             <p id="version">Versie: 1.0</p>
         </header>
 
@@ -59,7 +59,7 @@
                         <h2>Afbeeldingen toevoegen</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/placeholder.jpg">
+                        <img src="images/github.jpg">
                     </div>
                 </header>
                 <section>
