--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         </p>
                     </div>
                     <div class="meta">
-                        <img id="winnaar-image" src="images/powerpuff.jpg">
+                        <img id="winnaar-image" src="images/buttercup.png">
                     </div>
                 </header>
 
